# Apple_Carving

./: README.md  Позоян_Рафаэль_курсовая_БПМ__22_4.docx
AppleCarving/: CMakeLists.txt
AppleCarving/project/: CMakeLists.txt
AppleCarving/project/carving/: AppleCarving.cpp  CMakeLists.txt
AppleCarving/project/carving/include/AppleCarving/: AppleCarving.hpp
AppleCarving/project/docs/: Doxyfile
AppleCarving/project/test/: CMakeLists.txt  main.cpp
AppleCarving/project/test/data/: data1.txt  data2.txt  data3.txt  data4.txt
